src/components/Order/Order.module.scss
@import "~styles/__variables";
@import "~styles/__mixins";

.order {
  width: 100%;
  height: 100%;
  overflow-y: auto;
  padding: $padding * 4;
  color: $primary-text-color;

  @include mobile-down {
    padding: $padding * 4 $padding;
  }

  &__portal {
    background-color: $primary-white;

    &-close {
      svg {
        fill: $primary-black;
      }
    }
  }

  &__instagram,
  &__whatsapp,
  &__email {
    display: flex;
    flex-direction: row;
    align-items: center;
    justify-content: flex-start;
    font-size: 0.8em;
    color: $primary-text-color;
    margin: $padding / 2 0;

    @include primary-font;

    svg {
      width: 1.4em;
      height: 1.4em;
      fill: $primary-color;

      margin-right: $padding / 2;

      @include mobile-down {
        width: 1.2em;
        height: 1.2em;
      }
    }
  }

  &__title {
    text-align: center;
    font-size: 2em;
    margin-bottom: $padding * 4;
    font-weight: 300;

    @include tablet-down {
      margin-bottom: $padding * 2;
    }

    @include tablet-down {
      font-size: 1.8em;
    }

    @include mobile-down {
      font-size: 1.6em;
    }
  }

  &__main {
    display: flex;
    flex-direction: row;
    align-items: center;
    justify-content: center;

    overflow: hidden;

    @include secondary-font;

    @include mobile-down {
      flex-direction: column-reverse;
      align-items: stretch;
    }
  }

  &__illustration {
    margin-left: $padding * 2;

    svg {
      display: block;
      width: 500px;
      height: 100%;
    }

    @include mobile-down {
      margin-left: 0;

      svg {
        width: 100%;
      }
    }
  }

  &__faq {
    margin-left: auto;
    margin-right: auto;
    max-width: $desktop-width;
    margin-top: $padding * 4;
    padding-top: $padding * 4;

    @include mobile-down {
      margin-top: $padding * 2;
      padding-top: $padding * 2;
    }

    &-title {
      text-align: center;
      font-size: 1.4em;
      font-weight: 300;
      margin-bottom: $padding * 4;

      @include tablet-down {
        margin-bottom: $padding * 2;
      }

      @include tablet-down {
        font-size: 1.2em;
      }
    }

    &-list {
      &-item {
        border-bottom: 1px solid
          transparentize($color: $primary-black, $amount: 0.8);

        &-header {
          font-size: 1em;
          padding: $padding * 2 $padding * 2 $padding * 2 0;
          cursor: pointer;

          &:focus {
            outline: unset;
          }

          &::after {
            content: "+";
            position: absolute;
            font-size: 1.2em;
            font-weight: 400;
            color: $primary-color;
            top: calc(50% - 0.5em);
            right: 10px;
            height: 1em;
          }

          &--opened {
            &::after {
              content: "-";
            }
          }
        }

        &-content {
          font-size: 0.8em;
          line-height: 1.4em;
          padding: $padding * 2;

          @include secondary-font;

          @include mobile-down {
            padding: $padding $padding;

            font-size: 0.75em;
          }
        }
      }
    }
  }
}

